logs/Slang/generated/hdlconv/hdlconvertor_p535.sv.log
name: hdlconvertor_p535
description: Tests imported from hdlconv
files: /home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p535.sv
should_fail: 0
tags: hdlconv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p535.sv:1:1: error: language feature not yet supported
class Packet;
^~~~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p535.sv:6:31: error: use of undeclared identifier 'Packet'
function integer toggle_rand( Packet p );
                              ^~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p535.sv:15:1: error: language feature not yet supported
class CA;
^~~~~~~~~
